# simple_chatbot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
src/: app.py  document_reader.py  embeddings.py  llm.py  models.py  prompt.py  search.py
